--- a/demos/ChangeLog
+++ b/demos/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-05  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* makefile:
+	Add linking with lib/poll.o for win32 build mode.
+
 2004-03-23  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* wm_summary.thtml, wm_message.thtml:
