--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-05  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* makefile:
+	Use libpoll.a instead of poll.o for optional linking.
+
 2004-03-25  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
