--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,11 @@
+2004-04-06  Pascal Obry  <pascal.obry@edf.fr>
+
+	* makefile:
+	(RT_STD): Add smtp.
+
+	* smtp.adb, smtp.out:
+	Initial revision.
+
 2004-04-05  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* makefile:
