--- a/demos/ChangeLog
+++ b/demos/ChangeLog
@@ -1,6 +1,11 @@
 2004-04-06  Pascal Obry  <pascal.obry@edf.fr>
 
 	* demos.gpr:
+	(WIN_OPT): Add -lpoll.
+	
+2004-04-06  Pascal Obry  <pascal.obry@edf.fr>
+
+	* demos.gpr:
 	(Main): Add web_mail.adb.
 
 	* wm_summary.thtml:
