--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-12  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws.ads:
+	(Version): Set to 2.1w.
+
 2004-04-06  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws.ads:
