Update my e-mail.

--- a/AUTHORS
+++ b/AUTHORS
@@ -10,4 +10,4 @@ AWS is the work of two developers over this period.
 
 Dmitriy Anisimkov	anisimkov@yahoo.com
 
-Pascal Obry		p.obry@wanadoo.fr
+Pascal Obry		pascal@obry.org
