--- a/demos/ChangeLog
+++ b/demos/ChangeLog
@@ -1,3 +1,9 @@
+2004-04-14  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
+	(BUILD_EXT): New variable. Set to build_wsdl only if XMLADA is set.
+	(gbuild): Use $(BUILD_EXT).
+
 2004-04-06  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* demos.gpr:
