--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-19  Pascal Obry  <pascal@obry.org>
+
+	* makefile:
+	(clean): Update rule.
+
 2004-04-18  Pascal Obry  <pascal@obry.org>
 
 	* makefile:
