--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-22  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-net-ssl.adb:
+	(Error_Str): Fix stack damage.
+
 2004-04-22  Pascal Obry  <pascal@obry.org>
 
 	* aws-net-ssl.adb:
