--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,11 @@
+2004-04-27  Pascal Obry  <pascal@obry.org>
+
+	* makefile:
+	(WSDL_ATESTS): Add test_wsdl5.
+
+	* test_wsdl5.wsdl, test_wsdl5.adb, test_wsdl5.res:
+	Initial revision.
+
 2004-04-22  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* sockto.adb, ssockto.adb:
