--- a/soap/ChangeLog
+++ b/soap/ChangeLog
@@ -1,5 +1,11 @@
 2004-04-27  Pascal Obry  <pascal@obry.org>
 
+	* soap-generator.adb:
+        (Generate_Array): Fix regression introduce in previous check-in.
+	Minor reformatting.
+
+2004-04-27  Pascal Obry  <pascal@obry.org>
+
 	* soap-generator-stub.adb:
 	(New_Procedure): Properly generate Ada style identifier.
         Update copyright notice.
