--- a/ssl/ChangeLog
+++ b/ssl/ChangeLog
@@ -1,3 +1,11 @@
+2004-05-14  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* ssl-thin.ads:
+	(SSL_CTX_use_certificate_chain_file): New binded routine.
+
+	* ssl-wrappers.ads, ssl-wrappers.adb:
+	(SSL_CTX_use_certificate_chain_file): New routine stub.
+
 2004-04-22  Dmitriy Anisimkov  <anisimkov@yahoo.com>
 
 	* ssl-thin.ads:
