--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-14  Pascal Obry  <pascal@obry.org>
+
+	* makefile:
+	(SOURCES): Add ai302.ads.
+
 2004-05-13  Pascal Obry  <pascal@obry.org>
 
 	* makefile:
