--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2004-05-19  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-server-push.adb:
+	(Unregister): Do not detete element before get it.
+	(Unregister_Clients): Do not use cursor after container modification.
+
 2004-05-18  Pascal Obry  <pascal@obry.org>
 
 	* templates_parser-xml.ads, templates_parser-xml.adb:
