--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,11 @@
+2004-05-19  Pascal Obry  <pascal@obry.org>
+
+	* templates_parser-utils.ads, templates_parser-utils.adb:
+	Initial revision.
+
+	* templates_parser-query.ads:
+	Update copyright notice.
+
 2004-05-19  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-server-push.adb:
