--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-20  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* tpc.adb, tpc.out, makefile:
+	Transient pages cleaner regression test.
+
 2004-05-19  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* sp.adb, ssp.adb, sp_pck.ads, sp_pck.adb:
