--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,12 @@
+2004-05-20  Pascal Obry  <pascal@obry.org>
+
+	* aws-services-transient_pages.adb:
+	Minor reformatting.
+
+	* aws-response.adb:
+	(File): Add Content_Disposition header to pass the proper filename
+	 to the browser.
+
 2004-05-20  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-services-transient_pages.adb:
