--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-20  Pascal Obry  <pascal@obry.org>
+
+	* ai302-strings-hash.adb:
+	Use a better implementation.
+
 2004-05-17  Pascal Obry  <pascal@obry.org>
 
 	* include.gpr:
