--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,11 @@
+2004-05-21  Pascal Obry  <pascal@obry.org>
+
+	* aws-response.adb:
+	(File): Only set the Content-Disposition header if Attachment is set.
+
+	* aws-response.ads:
+	(File): Fix comment.
+
 2004-05-20  Pascal Obry  <pascal@obry.org>
 
 	* templates_parser-xml.ads, templates_parser-xml.adb:
