--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,22 @@
+2004-05-22  Pascal Obry  <pascal@obry.org>
+
+	* aws-response.adb:
+	(File): Properly handle Content-Disposition.
+	(Stream): Add Content-Disposition handling to match the one in File.
+
+	* aws-response.ads:
+	(Disposition_Mode): New type to control Content-Disposition of
+	 file and stream responses.
+	(File): Change parameter Attachment to Disposition. Add parameter
+	 User_Filename.
+	(Stream): Add parameter Disposition and User_Filename.
+
+	* aws-resources-streams-disk.ads, aws-resources-streams-disk.adb:
+	(Name): New routine.
+
+	* aws-resources-streams.ads, aws-resources-streams.adb:
+	(Name): New routine.
+
 2004-05-21  Pascal Obry  <pascal@obry.org>
 
 	* aws-response.adb:
