--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,14 @@
+2004-05-22  Pascal Obry  <pascal@obry.org>
+
+	* makefile:
+	(RT_STD): Add afile.
+
+	* afile.adb, afile_strm.ads:
+	Initial revision.
+
+	* tpc.adb:
+	Set to UNIX format.
+
 2004-05-20  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* tpc.adb, tpc.out, makefile:
