--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,11 @@
+2004-05-24  Pascal Obry  <pascal@obry.org>
+
+	* afile.adb:
+	(CB): Rewrite to be thread safe as expected by the server.
+
+	* afile_strm.ads:
+	Removed.
+
 2004-05-22  Pascal Obry  <pascal@obry.org>
 
 	* afile.out:
