--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,14 @@
+2004-05-26  Pascal Obry  <pascal@obry.org>
+
+	* makefile:
+	(RT_STD): Add no_param.
+
+	* no_param.adb, no_param.out:
+	Initial revision.
+
+	* afile.adb:
+	Minor reformatting.
+
 2004-05-25  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* afile.adb:
