--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,15 @@
+2004-05-26  Pascal Obry  <pascal@obry.org>
+
+	* aws-response.ads, aws-response.adb:
+	(File): Set Disposition default to None. There is some security
+         issues with the Content-Disposition header which is not part of
+         the HTTP standard. We want AWS to stay on the safe side.
+        (Stream): Idem.
+
+	* aws-parameters.ads:
+	(List): Move documentation right after the List definition, was
+	 on the private section.
+
 2004-05-24  Pascal Obry  <pascal@obry.org>
 
 	* templates_parser.adb:
