--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,15 @@
+2004-05-26  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-net-ssl.ads, aws-net-ssl.adb, aws-net-std.ads:
+	(Receive): Change from function to procedure.
+
+	* aws-net.ads:
+	(Receive): Add abstract procedure. Function is not abstract with
+	 classwide socket parameter.
+
+	* aws-net.adb:
+	(Receive): Function implementation based on procedure.
+
 2004-05-26  Pascal Obry  <pascal@obry.org>
 
 	* aws-response.ads:
