--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-26  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* back_proc.adb:
+	(Wait_Call): Add exception information to error message.
+
 2004-05-26  Pascal Obry  <pascal@obry.org>
 
 	* afile.adb: 
