--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,10 @@
+2004-05-27  Pascal Obry  <pascal@obry.org>
+
+	* makefile:
+	(check_mem): Remove sed command used to change the previous
+	 AWS.Conatiners.Tables implementation based on
+	 GNAT.Dynamic_Table. Not needed anymore.
+
 2004-05-26  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* back_proc.adb:
